Remove red outline that shows potential overflow issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    color: #34454A;
-    outline: 1px solid #f00 !important;
+    color: #34454A;S
 }
 
 h2 {
